<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"/>
        <item android:id="@+id/nav_export"
            android:icon="@drawable/ic_export"
            android:title="@string/export"/>
        <item android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_accounts"
            android:title="@string/profile"/>
        <item android:id="@+id/nav_viz"
            android:icon="@drawable/ic_logout"
            android:title="@string/visualize"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
<!--    <item android:title="Commmunicate">-->
<!--        <menu>-->
<!--            <item android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_logout"-->
<!--                android:title="@string/logout"/>-->

<!--            <item android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_logout"-->
<!--                android:title="@string/logout"/>-->
<!--        </menu>-->
<!--    </item>-->
</menu>